[tool.poetry]
name = "crypto_analyzer"
version = "0.1.0"
description = ""
authors = ["Marcos Paulo <marcosjunioribm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
selectorlib = "^0.16.0"
pandas = "^1.3.5"
SQLAlchemy = "1.3.24"
apache-airflow = "^2.2.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
